Fix multiple field labels z-index

--- a/styles/editor-interface.css
+++ b/styles/editor-interface.css
@@ -11718,7 +11718,7 @@ div.upfront-region-container:hover > a.feature_image_selector {
   background-image: linear-gradient(-179deg, #F2F9FF 0%, #DAE7F2 100%) !important;
   border: 1px solid rgba(125, 152, 179, 0.3) !important;
   border-radius: 1px !important;
-  z-index: 99; }
+  z-index: 19; }
 
 .chosen-container .chosen-results li.highlighted {
   background: #d8e0e8 !important;
