--- a/styles/sass/partials/_chosen.scss
+++ b/styles/sass/partials/_chosen.scss
@@ -231,7 +231,7 @@
 	background-image: linear-gradient(-179deg, #F2F9FF 0%, #DAE7F2 100%) !important;
 	border: 1px solid rgba(125,152,179,0.30) !important;
 	border-radius: 1px !important;
-	z-index: 99;
+	z-index: 19;
 }
 .chosen-container .chosen-results li.highlighted {
 	background: #d8e0e8 !important;
